# TrackerRecord

./: .bumpversion.cfg  .gitignore  HISTORY.rst  README.rst  TrackerRecord.spec  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_pyinstaller.txt  tracker_app.py
.github/workflows/: pyinstaller.yml
packaging/: generate_changelog.py
tracker_record/: gui.py  gui_widgets.py  main.py  record.py
